fix z-index issue

--- a/components/MusicButton.module.css
+++ b/components/MusicButton.module.css
@@ -2,6 +2,7 @@
   position: fixed;
   bottom: 16px;
   right: 16px;
+  z-index: 99;
 }
 
 .button {
