--- a/pages/resources.module.css
+++ b/pages/resources.module.css
@@ -10,7 +10,7 @@
 .speakerKit {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   margin-top: 48px;
 }
 
